--- a/respo/config-client-dev.properties
+++ b/respo/config-client-dev.properties
@@ -1,5 +1,5 @@
 
-foo = foo version kjl test test
+foo = foo version kjl test test kjl
 democonfigclient.message=hello spring io
 
 # routes to serviceId
