--- a/scfchapter1/config-client/src/main/resources/application.properties
+++ b/scfchapter1/config-client/src/main/resources/application.properties
@@ -1,5 +1,18 @@
 spring.application.name=config-client
 spring.cloud.config.label=master
 spring.cloud.config.profile=dev
-spring.cloud.config.uri= http://localhost:8888/
+#spring.cloud.config.uri= http://localhost:8888/
 server.port=8881
+eureka.client.serviceUrl.defaultZone=http://localhost:8889/eureka/
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.serviceId=config-server
+
+
+spring.rabbitmq.host=192.168.9.252
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
+
+spring.cloud.bus.enabled=true
+spring.cloud.bus.trace.enabled=true
+management.endpoints.web.exposure.include=bus-refresh
