--- a/scfchapter1/config-server/src/main/resources/application.properties
+++ b/scfchapter1/config-server/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.cloud.config.server.git.searchPaths=respo
 spring.cloud.config.label=master
 spring.cloud.config.server.git.username=jianluokong
 spring.cloud.config.server.git.password=201803@kjl
+eureka.client.serviceUrl.defaultZone=http://localhost:8889/eureka/
