--- a/scfchapter1/service-hi/src/main/resources/application.yml
+++ b/scfchapter1/service-hi/src/main/resources/application.yml
@@ -3,7 +3,9 @@ server:
 spring:
   application:
     name: service-hi
+  zipkin:
+    base-url: http://localhost:9411
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://peer1:8761/eureka/
