--- a/scfchapter1/service-ribbon/src/main/resources/application.yml
+++ b/scfchapter1/service-ribbon/src/main/resources/application.yml
@@ -3,10 +3,12 @@ server:
 spring:
   application:
     name: service-ribbon
+  zipkin:
+    base-url: http://localhost:9411
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://peer1:8761/eureka/
 hystrix:
   command:
     default:
