--- a/scfchapter1/service-zuul/src/main/resources/application.yml
+++ b/scfchapter1/service-zuul/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 server:
-  port: 8769
+  port: 10000
 spring:
   application:
     name: service-zuul
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://peer1:8761/eureka/
 zuul:
   routes:
     api-a:
